Adding routing to the project

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,9 +15,9 @@
                 Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#">To Shopping list</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a>To Shopping list</a></li>
+                <li><a [routerLink]="['edit']">Edit Recipe</a></li>
+                <li><a>Delete Recipe</a></li>
             </ul>
         </div>
     </div>
