--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,15 +5,15 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#" (click)="onNavigationItemSelected(0)">Recipes</a></li>
-                <li><a href="#" (click)="onNavigationItemSelected(1)">Shopping list</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['recipes']">Recipes</a></li>
+                <li routerLinkActive="active"><a [routerLink]="['shopping-list']">Shopping list</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" app-dropdown>
-                    <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
+                    <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Recipes</a></li>
-                        <li><a href="#">Shopping list</a></li>
+                        <li><a [routerLink]="['recipes']">Recipes</a></li>
+                        <li><a [routerLink]="['shopping-list']">Shopping list</a></li>
                     </ul>
                 </li>
                 
